# python-dspam

./: .mise.toml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: checks.yml
plugins/dspam-plugin-email/: README.md  pyproject.toml
plugins/dspam-plugin-email/src/dspam_plugin_email/: __init__.py  parse.py
plugins/dspam-plugin-email/src/dspam_plugin_email/tests/: test_parse_email.py
plugins/dspam-plugin-email/tests/: conftest.py  test_email_parser.py  test_email_parser_settings.py  test_email_parser_tokenize.py  test_parse_email.py
plugins/dspam-plugin-email/tests/assets/: spam-plaintext.eml
plugins/python-dspam-plugin-email/: README.md  pyproject.toml
plugins/python-dspam-plugin-email/src/dspam_plugin_email/: parse.py
plugins/python-dspam-plugin-email/tests/: test_email_parser.py  test_email_parser_settings.py  test_email_parser_tokenize.py
plugins/python-dspam-plugin-email/tests/assets/: html-only.eml  mime-attachment-only.eml  mime-html-only.eml  multipart-mime.eml  spam-html-utf8-zh-cn.eml
src/dspam/: __init__.py  __main__.py  classify.py  cli.py  di.py  exceptions.py  main.py  parse.py  plugins.py  settings.py  storage.py  tokenize.py  train.py  types.py
src/dspam/tests/: conftest.py  test_storage_json.py  test_tokenize_word.py  test_train_simple.py
tests/: conftest.py  test_classify_base.py  test_classify_dummy.py  test_classify_simple.py  test_settings.py  test_settings_new.py  test_storage_json.py  test_tokenize_word.py  test_train_simple.py
