[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning>=3.0,<4", ]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "python-dspam"
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    "cyclopts>=4.11.0",
]

[project.entry-points.console_scripts]
dspam = "dspam.__main__:cli"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.6.0",
]

[tool.uv.workspace]
members = ["plugins/*"]
