[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning>=3.0,<4", ]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "python-dspam"
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    "anyio>=4.13.0",
    "cyclopts>=4.11.0",
    "orjson>=3.11.9",
    "rodi>=2.1.0",
]

[project.entry-points.console_scripts]
dspam = "dspam.cli:main"

[dependency-groups]
dev = [
    { include-group = "test" },
    "ipdb>=0.13.13",
    "pre-commit>=4.6.0",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.workspace]
members = ["plugins/*"]
