[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning>=3.0,<4", ]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "python-dspam"
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    "anyio>=4.13.0",
    "cyclopts>=4.11.0",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "rodi>=2.1.0",
]

[project.entry-points.console_scripts]
dspam = "dspam.cli:main"

[dependency-groups]
dev = [
    { include-group = "test" },
    "ipdb>=0.13.13",
    "pre-commit>=4.6.0",
]
test = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.uv.workspace]
members = ["plugins/*"]

[tool.uv.sources]
# TODO: remove after release of: https://github.com/pydantic/pydantic-settings/pull/882
pydantic-settings = { git = "https://github.com/pydantic/pydantic-settings.git", rev = "afda1f71420bee772a0a0be9e6f6fac014df9e25" }

[tool.mypy]
python_version = 3.14
strict = true
warn_unused_configs = true
pretty = true
exclude = [
    '(^|/)tests(/|$)',
]

[tool.pytest]
minversion = "9.0"
anyio_mode = "auto"
addopts = [
    "--cov",
    "--cov-report=term-missing",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
]

[tool.coverage.run]
branch = true
source = [
    "src/",
    "plugins/",
]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
skip_empty = true
